# RSS

./: CMakeLists.txt  LICENSE  Main.qml  MainEntry.qml  NetworkFactory.h  README.md  RssFilterModel.cpp  RssFilterModel.h  RssItem.h  RssModel.cpp  RssModel.h  RssReader.cpp  RssReader.h  SettingsManager.cpp  SettingsManager.h  databaseManager.cpp  databaseManager.h  main.cpp  qmldir  rssnews.qmlproject  rssnews.qrc
.github/workflows/: m.yml
content/: AddDialog.qml  BusyIndicator.qml  DetailContainer.qml  NewsListContainer.qml  Notification.qml  PasswordDialog.qml  RssFeeds.qml  SettingsDialog.qml  Sidebar.qml
